force-app/main/default/objects/ProjectService__c/ProjectService__c.object-meta.xml
<CustomObject>
    <description>Project Service relates a Service to a Project and is a container used to define the instance of a Service for a specific Project. Project Service is related to Project, Job, Project Service Attribute, Project Service Certification, Project Service Equipment, Project Service Material, Project Service Question, Project Service Target, and Service.</description>
    <label>Project Service</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>