force-app/main/default/objects/ProjectService__c/fields/AttachmentLastModifiedDateforHT__c.field-meta.xml
<CustomField>
    <fullName>AttachmentLastModifiedDateforHT__c</fullName>
    <label>Attachment Last Modified Date for HT</label>
    <type>DateTime</type>
</CustomField>