force-app/main/default/objects/ProjectService__c/fields/AttributeLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>AttributeLastModifiedDate__c</fullName>
    <label>Attribute Last Modified Date</label>
    <summarizedField>ProjectServiceAttribute__c.LastModifiedDate</summarizedField>
    <summaryFilterItems>
        <field>ProjectServiceAttribute__c.AttachmentURL__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>ProjectServiceAttribute__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>