force-app/main/default/objects/ProjectService__c/fields/AttributeLastModifiedDateforHT__c.field-meta.xml
<CustomField>
    <fullName>AttributeLastModifiedDateforHT__c</fullName>
    <label>Attribute Last Modified Date for HT</label>
    <type>DateTime</type>
</CustomField>