force-app/main/default/objects/ProjectService__c/fields/CancelReasonComment__c.field-meta.xml
<CustomField>
    <fullName>CancelReasonComment__c</fullName>
    <label>Cancel Reason Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>