force-app/main/default/objects/ProjectService__c/fields/CertificationLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CertificationLastModifiedDate__c</fullName>
    <label>Certification Last Modified Date</label>
    <summarizedField>ProjectServiceCertification__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>ProjectServiceCertification__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>