force-app/main/default/objects/ProjectService__c/fields/CertificationLastModifiedDateforHT__c.field-meta.xml
<CustomField>
    <fullName>CertificationLastModifiedDateforHT__c</fullName>
    <label>Certification Last Modified Date for HT</label>
    <type>DateTime</type>
</CustomField>