force-app/main/default/objects/ProjectService__c/fields/ChangeRecordType__c.field-meta.xml
<CustomField>
    <fullName>ChangeRecordType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChangeRecordType</label>
    <type>Checkbox</type>
</CustomField>