force-app/main/default/objects/ProjectService__c/fields/CheckDistribution__c.field-meta.xml
<CustomField>
    <fullName>CheckDistribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adding Distribution Check service, set flag so that distribution repository is checked at each Location.</description>
    <inlineHelpText>Select to create Target questions only for Products in distribution (PDS) at the rep&#39;s location.</inlineHelpText>
    <label>Filter Targets by Location</label>
    <type>Checkbox</type>
</CustomField>