force-app/main/default/objects/ProjectService__c/fields/DayNumber__c.field-meta.xml
<CustomField>
    <fullName>DayNumber__c</fullName>
    <label>DEPRECATED Day Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>