force-app/main/default/objects/ProjectService__c/fields/EquipmentLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>EquipmentLastModifiedDate__c</fullName>
    <label>Equipment Last Modified Date</label>
    <summarizedField>ProjectServiceEquipment__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>ProjectServiceEquipment__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>