force-app/main/default/objects/ProjectService__c/fields/EquipmentLastModifiedDateforHT__c.field-meta.xml
<CustomField>
    <fullName>EquipmentLastModifiedDateforHT__c</fullName>
    <label>Equipment Last Modified Date for HT</label>
    <type>DateTime</type>
</CustomField>