force-app/main/default/objects/ProjectService__c/fields/EstimatedMinutes__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMinutes__c</fullName>
    <inlineHelpText>Estimated Project Service minutes per rep</inlineHelpText>
    <label>Estimated Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>