force-app/main/default/objects/ProjectService__c/fields/ExceptionPrompt__c.field-meta.xml
<CustomField>
    <fullName>ExceptionPrompt__c</fullName>
    <formula>Service__r.ExceptionPrompt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception Prompt</label>
    <type>Text</type>
</CustomField>