force-app/main/default/objects/ProjectService__c/fields/ExternalService__c.field-meta.xml
<CustomField>
    <fullName>ExternalService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates service is pushed by external system</description>
    <label>External Service</label>
    <type>Checkbox</type>
</CustomField>