force-app/main/default/objects/ProjectService__c/fields/FulfillmentCenterName__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentCenterName__c</fullName>
    <label>Fulfillment Center Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>