force-app/main/default/objects/ProjectService__c/fields/HasMaterials__c.field-meta.xml
<CustomField>
    <fullName>HasMaterials__c</fullName>
    <formula>IF( NumberOfMaterials__c &gt; 0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasMaterials</label>
    <type>Checkbox</type>
</CustomField>