force-app/main/default/objects/ProjectService__c/fields/IncludeAutoGenManual__c.field-meta.xml
<CustomField>
    <fullName>IncludeAutoGenManual__c</fullName>
    <defaultValue>true</defaultValue>
    <description>setting to include system generated manual. Default to true</description>
    <label>Attach System Generated Manual</label>
    <type>Checkbox</type>
</CustomField>