force-app/main/default/objects/ProjectService__c/fields/IsExcludedForSuccessRate__c.field-meta.xml
<CustomField>
    <fullName>IsExcludedForSuccessRate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indicator that decide if this service is included in the success rate calculation.</description>
    <inlineHelpText>Determines whether service completion will be included in the Success Rate measurement in OneHub Analytic client-facing dashboards.</inlineHelpText>
    <label>Do Not Include in Success Rate</label>
    <type>Checkbox</type>
</CustomField>