force-app/main/default/objects/ProjectService__c/fields/isManualGenInProgress__c.field-meta.xml
<CustomField>
    <fullName>isManualGenInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isManualGenInProgress</label>
    <type>Checkbox</type>
</CustomField>