force-app/main/default/objects/ProjectService__c/fields/IsMaterialNeeded__c.field-meta.xml
<CustomField>
    <fullName>IsMaterialNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select when Project Service Materials are required.</inlineHelpText>
    <label>Is Material Needed?</label>
    <type>Checkbox</type>
</CustomField>