force-app/main/default/objects/ProjectService__c/fields/IsSurveyScoreExceedThreshold__c.field-meta.xml
<CustomField>
    <fullName>IsSurveyScoreExceedThreshold__c</fullName>
    <formula>SurveyComplexityScore__c &gt;= $Setup.SurveyScoreSettings__c.SurveyScoreThreshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Survey Score Exceed Threshold</label>
    <type>Checkbox</type>
</CustomField>