force-app/main/default/objects/ProjectService__c/fields/IsSurveyScoreWarning__c.field-meta.xml
<CustomField>
    <fullName>IsSurveyScoreWarning__c</fullName>
    <formula>AND (SurveyComplexityScore__c &gt;= $Setup.SurveyScoreSettings__c.SurveyScoreWarning__c, SurveyComplexityScore__c 
 &lt; $Setup.SurveyScoreSettings__c.SurveyScoreThreshold__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Survey Score Warning</label>
    <type>Checkbox</type>
</CustomField>