force-app/main/default/objects/ProjectService__c/fields/isVisibleToClient__c.field-meta.xml
<CustomField>
    <fullName>isVisibleToClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the service visible to the client?</description>
    <inlineHelpText>Select to provide the client visibility to project service results, including photos.</inlineHelpText>
    <label>Is Visible to Client</label>
    <type>Checkbox</type>
</CustomField>