force-app/main/default/objects/ProjectService__c/fields/JobManual__c.field-meta.xml
<CustomField>
    <fullName>JobManual__c</fullName>
    <label>JobManual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Manual</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>