force-app/main/default/objects/ProjectService__c/fields/JobManualFileName__c.field-meta.xml
<CustomField>
    <fullName>JobManualFileName__c</fullName>
    <description>Stores the file name of custom template</description>
    <label>Job Manual File Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>