force-app/main/default/objects/ProjectService__c/fields/JobManualTemplate__c.field-meta.xml
<CustomField>
    <fullName>JobManualTemplate__c</fullName>
    <inlineHelpText>Please upload pdf files only.</inlineHelpText>
    <label>Job Manual Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>