force-app/main/default/objects/ProjectService__c/fields/JobManualURL__c.field-meta.xml
<CustomField>
    <fullName>JobManualURL__c</fullName>
    <description>URL to access event manual</description>
    <label>Job Manual URL</label>
    <type>Url</type>
</CustomField>