force-app/main/default/objects/ProjectService__c/fields/LastSummaryRefreshDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastSummaryRefreshDateTime__c</fullName>
    <label>Last Summary Refresh Date Time</label>
    <type>DateTime</type>
</CustomField>