force-app/main/default/objects/ProjectService__c/fields/MaterialLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>MaterialLastModifiedDate__c</fullName>
    <label>Material Last Modified Date</label>
    <summarizedField>ProjectServiceMaterial__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>ProjectServiceMaterial__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>