force-app/main/default/objects/ProjectService__c/fields/MaterialLastModifiedDateforHT__c.field-meta.xml
<CustomField>
    <fullName>MaterialLastModifiedDateforHT__c</fullName>
    <label>Material Last Modified Date for HT</label>
    <type>DateTime</type>
</CustomField>