force-app/main/default/objects/ProjectService__c/fields/NumberOfAssignedJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAssignedJobs__c</fullName>
    <label>Number of Jobs Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>