force-app/main/default/objects/ProjectService__c/fields/NumberOfAttributes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAttributes__c</fullName>
    <label>Number of Attributes</label>
    <summaryForeignKey>ProjectServiceAttribute__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>