force-app/main/default/objects/ProjectService__c/fields/NumberOfCanceledJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCanceledJobs__c</fullName>
    <label>Number of Jobs Canceled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>