force-app/main/default/objects/ProjectService__c/fields/NumberofCertifications__c.field-meta.xml
<CustomField>
    <fullName>NumberofCertifications__c</fullName>
    <label>Number of Certifications</label>
    <summaryForeignKey>ProjectServiceCertification__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>