force-app/main/default/objects/ProjectService__c/fields/NumberOfClosedJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfClosedJobs__c</fullName>
    <label>Number of Jobs Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>