force-app/main/default/objects/ProjectService__c/fields/NumberOfCompletedJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCompletedJobs__c</fullName>
    <label>Number of Jobs Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>