force-app/main/default/objects/ProjectService__c/fields/NumberOfDays__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDays__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Replaced with Project Number of Days</inlineHelpText>
    <label>Number of Days - N/A FOR NEW PROJECTS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>