force-app/main/default/objects/ProjectService__c/fields/NumberofDefinedResponses__c.field-meta.xml
<CustomField>
    <fullName>NumberofDefinedResponses__c</fullName>
    <label>Number of Defined Responses</label>
    <summarizedField>ProjectServiceQuestion__c.DefinedResponseCount__c</summarizedField>
    <summaryFilterItems>
        <field>ProjectServiceQuestion__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>