force-app/main/default/objects/ProjectService__c/fields/NumberOfEquipment__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEquipment__c</fullName>
    <label>Number of Equipment</label>
    <summaryForeignKey>ProjectServiceEquipment__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>