force-app/main/default/objects/ProjectService__c/fields/NumberOfExceptionJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfExceptionJobs__c</fullName>
    <label>Number of Jobs Exception</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>