force-app/main/default/objects/ProjectService__c/fields/NumberOfExecutedJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfExecutedJobs__c</fullName>
    <label>Number of Jobs Executed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>