force-app/main/default/objects/ProjectService__c/fields/NumberOfFailedQCJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFailedQCJobs__c</fullName>
    <label>Number of Jobs Failed QC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>