force-app/main/default/objects/ProjectService__c/fields/NumberOfJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfJobs__c</fullName>
    <label>Number of Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>