force-app/main/default/objects/ProjectService__c/fields/NumberofJobsRescheduled__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsRescheduled__c</fullName>
    <label>Number of Jobs Rescheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>