force-app/main/default/objects/ProjectService__c/fields/NumberofKittedItems__c.field-meta.xml
<CustomField>
    <fullName>NumberofKittedItems__c</fullName>
    <label>Number of Kitted Items</label>
    <summaryFilterItems>
        <field>ProjectServiceTarget__c.TargetAcquired__c</field>
        <operation>equals</operation>
        <value>K</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectServiceTarget__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>