force-app/main/default/objects/ProjectService__c/fields/NumberOfMaterials__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMaterials__c</fullName>
    <label>Number of Materials</label>
    <summaryForeignKey>ProjectServiceMaterial__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>