force-app/main/default/objects/ProjectService__c/fields/NumberOfNotCanceledJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfNotCanceledJobs__c</fullName>
    <label>Number of Jobs Not Canceled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>