force-app/main/default/objects/ProjectService__c/fields/NumberOfOpenJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpenJobs__c</fullName>
    <label>Number of Jobs Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>