force-app/main/default/objects/ProjectService__c/fields/NumberOfPendingJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPendingJobs__c</fullName>
    <label>Number of Jobs Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>