force-app/main/default/objects/ProjectService__c/fields/NumberofQuestions__c.field-meta.xml
<CustomField>
    <fullName>NumberofQuestions__c</fullName>
    <label>Number of Questions</label>
    <summaryFilterItems>
        <field>ProjectServiceQuestion__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>