force-app/main/default/objects/ProjectService__c/fields/NumberOfReportedJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfReportedJobs__c</fullName>
    <label>Number of Jobs Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>