force-app/main/default/objects/ProjectService__c/fields/NumberOfScheduledJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfScheduledJobs__c</fullName>
    <label>Number of Jobs Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>