force-app/main/default/objects/ProjectService__c/fields/NumberOfStartedJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStartedJobs__c</fullName>
    <label>Number of Jobs Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>