force-app/main/default/objects/ProjectService__c/fields/NumberOfTargets__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTargets__c</fullName>
    <label>Number of Targets</label>
    <summaryForeignKey>ProjectServiceTarget__c.ProjectService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>