force-app/main/default/objects/ProjectService__c/fields/NumberOfWorkers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWorkers__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Enter the number of workers need to finish the job</description>
    <inlineHelpText>Number of reps allocated to complete project execution at a location</inlineHelpText>
    <label>Number of Workers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>