force-app/main/default/objects/ProjectService__c/fields/OneHubRetailerId__c.field-meta.xml
<CustomField>
    <fullName>OneHubRetailerId__c</fullName>
    <label>One Hub Retailer ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>