force-app/main/default/objects/ProjectService__c/fields/PcardLeadTime__c.field-meta.xml
<CustomField>
    <fullName>PcardLeadTime__c</fullName>
    <label>Pcard Lead Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>