force-app/main/default/objects/ProjectService__c/fields/PcardLeadTimeCheck__c.field-meta.xml
<CustomField>
    <fullName>PcardLeadTimeCheck__c</fullName>
    <formula>BLANKVALUE(PcardLeadTime__c, $Setup.PcardLeadTimeDuration__c.PcardLeadTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PcardLeadTimeCheck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>