force-app/main/default/objects/ProjectService__c/fields/PercentCompleted__c.field-meta.xml
<CustomField>
    <fullName>PercentCompleted__c</fullName>
    <formula>NumberOfCompletedJobs__c / ( NumberOfJobs__c -  NumberOfCanceledJobs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>