force-app/main/default/objects/ProjectService__c/fields/PercentFailedQC__c.field-meta.xml
<CustomField>
    <fullName>PercentFailedQC__c</fullName>
    <formula>NumberOfFailedQCJobs__c /  NumberOfNotCanceledJobs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failed QC %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>