force-app/main/default/objects/ProjectService__c/fields/PopulateTargetQuestions__c.field-meta.xml
<CustomField>
    <fullName>PopulateTargetQuestions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To populate Target questions on Job manual</description>
    <inlineHelpText>When selected, survey questions will be repeated for each Target on the system-generated Job Manual.</inlineHelpText>
    <label>Populate Target Questions</label>
    <type>Checkbox</type>
</CustomField>