force-app/main/default/objects/ProjectService__c/fields/ProjectDateLaunched__c.field-meta.xml
<CustomField>
    <fullName>ProjectDateLaunched__c</fullName>
    <formula>Project__r.DateLaunched__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectDateLaunched</label>
    <type>DateTime</type>
</CustomField>