force-app/main/default/objects/ProjectService__c/fields/ProjectLocked__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocked__c</fullName>
    <formula>NOT ISBLANK( Project__r.ApexJobName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Locked</label>
    <type>Checkbox</type>
</CustomField>